/**
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @emails oncall+metro_bundler
 * @flow strict-local
 * @format
 */

import {parse} from 'hermes-parser';
import {getTypeAnnotation} from '../ast-helpers.js';
import {compareTypeAnnotation} from '../type-comparison.js';
import type {AnyTypeAnnotation} from '../type-annotation.js';
import type {FlowType, Statement} from '@babel/types';

function getTypeFromAlias(body: Statement): FlowType {
  if (body.type !== 'TypeAlias') {
    throw new Error('This function support only TypeAlias');
  }
  return body.right;
}

function getTypeFromCode(stringType: string): AnyTypeAnnotation {
  const ast = parse('type T =' + stringType, {
    babel: true,
    sourceType: 'module',
    sourceFilename: 'NativeDeviceManager.js',
  });
  const astType = getTypeFromAlias(ast.program.body[0]);
  return getTypeAnnotation(astType);
}

test.each([
  ['boolean', 'boolean'],
  ['string', 'string'],
  ['number', 'number'],
  ['void', 'void'],
  ['boolean', 'number'],
  ["'a'", "'a'"],
  ["'a'", "'b'"],
  ['8', '8'],
  ['2', '8'],
  ['2', 'number'],
  ['number', '2'],
  ['string', "'a'"],
  ["'a'", 'string'],
  ['true', 'true'],
  ['true', 'false'],
  ['string', '?string'],
  ['?number', 'number'],
  ['?boolean', 'true'],
  ['?string', '?string'],
  ['?string', "?'foo'"],
  ['?string', '?number'],
  ['null', 'null'],
  ['?string', 'null'],
  ['?boolean', 'void'],
])('comparing basic types', (left, right) => {
  const result = compareTypeAnnotation(
    getTypeFromCode(left),
    getTypeFromCode(right),
    'right',
  );
  let messages: string = '';
  result.forEach(error => {
    messages = messages + error.message + '\n\t\t';
  });
  messages = messages === '' ? 'no errors' : messages;
  expect(`
    left-type:
      ${left}
    right-type:
      ${right}
    output:
      ${messages}`).toMatchSnapshot();
});
