// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`comparing basic types 1`] = `
"
    left-type:
      boolean
    right-type:
      boolean
    output:
      no errors"
`;

exports[`comparing basic types 2`] = `
"
    left-type:
      string
    right-type:
      string
    output:
      no errors"
`;

exports[`comparing basic types 3`] = `
"
    left-type:
      number
    right-type:
      number
    output:
      no errors"
`;

exports[`comparing basic types 4`] = `
"
    left-type:
      void
    right-type:
      void
    output:
      no errors"
`;

exports[`comparing basic types 5`] = `
"
    left-type:
      boolean
    right-type:
      number
    output:
      Error: cannot change boolean to number because it will break the native code.
		"
`;

exports[`comparing basic types 6`] = `
"
    left-type:
      'a'
    right-type:
      'a'
    output:
      no errors"
`;

exports[`comparing basic types 7`] = `
"
    left-type:
      'a'
    right-type:
      'b'
    output:
      Error: cannot change string literal to string literal because it will break the native code.
		"
`;

exports[`comparing basic types 8`] = `
"
    left-type:
      8
    right-type:
      8
    output:
      no errors"
`;

exports[`comparing basic types 9`] = `
"
    left-type:
      2
    right-type:
      8
    output:
      Error: cannot change number literal to number literal because it will break the native code.
		"
`;

exports[`comparing basic types 10`] = `
"
    left-type:
      2
    right-type:
      number
    output:
      Error: cannot change number literal to number because it will break the native code.
		"
`;

exports[`comparing basic types 11`] = `
"
    left-type:
      number
    right-type:
      2
    output:
      no errors"
`;

exports[`comparing basic types 12`] = `
"
    left-type:
      string
    right-type:
      'a'
    output:
      no errors"
`;

exports[`comparing basic types 13`] = `
"
    left-type:
      'a'
    right-type:
      string
    output:
      Error: cannot change string literal to string because it will break the native code.
		"
`;

exports[`comparing basic types 14`] = `
"
    left-type:
      true
    right-type:
      true
    output:
      no errors"
`;

exports[`comparing basic types 15`] = `
"
    left-type:
      true
    right-type:
      false
    output:
      Error: cannot change boolean literal to boolean literal because it will break the native code.
		"
`;

exports[`comparing basic types 16`] = `
"
    left-type:
      string
    right-type:
      ?string
    output:
      Error: cannot change string to nullable string because it will break the native code.
		"
`;

exports[`comparing basic types 17`] = `
"
    left-type:
      ?number
    right-type:
      number
    output:
      no errors"
`;

exports[`comparing basic types 18`] = `
"
    left-type:
      ?boolean
    right-type:
      true
    output:
      no errors"
`;

exports[`comparing basic types 19`] = `
"
    left-type:
      ?string
    right-type:
      ?string
    output:
      no errors"
`;

exports[`comparing basic types 20`] = `
"
    left-type:
      ?string
    right-type:
      ?'foo'
    output:
      no errors"
`;

exports[`comparing basic types 21`] = `
"
    left-type:
      ?string
    right-type:
      ?number
    output:
      Error: cannot change string to number because it will break the native code.
		"
`;

exports[`comparing basic types 22`] = `
"
    left-type:
      null
    right-type:
      null
    output:
      no errors"
`;

exports[`comparing basic types 23`] = `
"
    left-type:
      ?string
    right-type:
      null
    output:
      no errors"
`;

exports[`comparing basic types 24`] = `
"
    left-type:
      ?boolean
    right-type:
      void
    output:
      no errors"
`;
